--- a/views/src/styles/main.css
+++ b/views/src/styles/main.css
@@ -9,6 +9,8 @@ body {
   border-bottom: solid 1px #e8e8e8;
   overflow: auto;
   box-shadow: 0 0 30px #f3f1f1; }
+  .menuBar .ant-menu-horizontal > .ant-menu-item {
+    top: 0; }
 
 .logo {
   width: 150px;
@@ -78,18 +80,6 @@ body {
   .logo a {
     padding: 10px 20px; } }
 
-.content-jp {
-  max-width: 1140px;
-  margin: 0 auto; }
-  .content-jp .ant-carousel .slick-slide {
-    text-align: center;
-    height: 400px;
-    line-height: 160px;
-    background: #364d79;
-    overflow: hidden; }
-  .content-jp .ant-carousel .slick-slide h3 {
-    color: #fff; }
-
 #footer {
   background-color: #ebecec;
   padding: 0px 16px; }
@@ -124,3 +114,40 @@ body {
   padding: 5px !important; }
   .col-table-order .ant-input-number {
     width: 60px; }
+
+.num-keybroad {
+  width: 200px; }
+  .num-keybroad button {
+    height: 50px;
+    width: 50px; }
+
+.order-page-input input {
+  background: #fff;
+  font-size: 16px;
+  text-align: center;
+  color: #333333; }
+
+.about-content {
+  margin-top: 24px;
+  padding: 0 16px; }
+
+.home-hot-product .home-hot-product-item {
+  height: 230px;
+  border: .5px solid #ccc;
+  border-left: none;
+  padding: 15px;
+  border-top: none;
+  box-shadow: 0px 0px 6px #d8d8d8;
+  margin: 8px; }
+  .home-hot-product .home-hot-product-item img {
+    max-height: 130px;
+    max-width: 100%; }
+  .home-hot-product .home-hot-product-item h3, .home-hot-product .home-hot-product-item p {
+    margin-top: 12px; }
+
+.ant-carousel {
+  height: 250px;
+  text-align: center;
+  overflow: hidden; }
+  .ant-carousel .slick-slide {
+    height: 280px; }
