--- a/views/src/styles/main.scss
+++ b/views/src/styles/main.scss
@@ -133,22 +133,10 @@ body {
     }
 }
 
-// .content-jp {
-//     max-width: 1140px;
-//     margin: 0 auto;
-
-//     .ant-carousel .slick-slide {
-//         text-align: center;
-//         height: 400px;
-//         line-height: 160px;
-//         background: #364d79;
-//         overflow: hidden;
-//     }
-
-//     .ant-carousel .slick-slide h3 {
-//         color: #fff;
-//     }
-// }
+.content-jp {
+    max-width: 1140px;
+    margin: 0 auto;
+}
 
 #footer {
     background-color: #ebecec;
