--- a/views/src/styles/main.css
+++ b/views/src/styles/main.css
@@ -80,6 +80,10 @@ body {
   .logo a {
     padding: 10px 20px; } }
 
+.content-jp {
+  max-width: 1140px;
+  margin: 0 auto; }
+
 #footer {
   background-color: #ebecec;
   padding: 0px 16px; }
