--- a/views/src/styles/main.css
+++ b/views/src/styles/main.css
@@ -1,8 +1,9 @@
 body {
   margin: 0;
-  padding: 0;
   font-family: sans-serif;
-  background: #fff; }
+  background: #fff;
+  height: 100%;
+  position: relative; }
 
 .menuBar {
   padding: 0 20px;
@@ -155,3 +156,6 @@ body {
   overflow: hidden; }
   .ant-carousel .slick-slide {
     height: 280px; }
+
+.so-image {
+  padding: 0px !important; }
